--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>aboutme｜tngw</title>
   
   <!-- OGP（TwitterとかにURL貼った時プレビューで出るやつ）の設定 -->
-<meta property="og:title" content="【ページタイトル】">
-<meta property="og:description" content="【ページ説明文（改行不可）】">
+<meta property="og:title" content="about">
+<meta property="og:description" content="自己紹介的なアレ">
 <meta property="og:image" content="https://【Githubアカウント名】.github.io/【リポジトリ名】/ogp.png">
 <meta property="og:url" content="https://【Githubアカウント名】.github.io/【リポジトリ名】/">
 <meta property="og:type" content="website">
@@ -167,10 +167,7 @@
     <img src="avatar.png" alt="プロフィール画像" class="avatar" id="avatar-img">
     <h2 class="title">谷川</h2>
     <h3 class="subtitle">ゲーム系二次創作を描くオタク</h3>
-    <a href="https://x.com/tanigawa0815" target="_blank" class="sns-link">
-      <img src="x-icon.png" alt="" class="sns-icon">
-    </a>
-    <p class="desc">自己紹介的なページ</p>
+    <p class="desc"></p>
   </div>
 
   <div class="card-list">
@@ -264,24 +261,24 @@
     <div class="card">
       <h2>好きとか苦手とかなもの</h2>
       <p> 
-▶︎DQシリーズ<br>
+<strong>▶︎DQシリーズ</strong><br>
 3再リメイクで再燃。1〜8、11をクリア済み。各種スマホゲームはほぼ触っておらずアンテナも低め。<br>
 3の好きなキャラは盗賊くん、勇者ちゃんや僧侶ちゃん、魔法使いじじいが転職して若くなるタイプの賢者。他ナンバリングにも好きなキャラが書き切れないレベルで多数ですが、主人公の親友相棒系の男子を好きになる傾向。
-推しCPは盗勇、クリアリ、ヘンマリ、ミレアモアモミレ等。自分で生産するしないを問わず好きなCPも多数（CP名は配慮で極力明記しております）。
+推しCPは盗勇、クリアリ、ヘンマリ、ミレアモアモミレ等。自分で生産するしないを問わず好きなCPも多数（CP名は配慮で極力明記しております）。<br>
 <br>
-▶︎俺屍<br>
+<strong>▶︎俺屍</strong><br>
 無印とRをクリア済み。ハードの問題で未プレイなものの興味があるのは2。<br>
 かなり昔の無印初見プレイ一族で長年二次創作を続けています。顔番号で推すなら4番16番22番の男子が特に好き。<br>
 人気の某実況一族さんは通して一周観た程度で、自ら進んで語ったり二次創作を描いたりはあまりないかと思います。<br>
 <br>
-▶︎その他ジャンル<br>
+<strong>▶︎その他ジャンル</strong><br>
 ・90年代〜00年代あたりのスクエニ作品<br>
 ・どこいつポケピ箱推し<br>
 ・最近やったpkmnは🛡️と🍊<br>
 ・その他色々レトロゲーム<br>
 ・好きで語れる作品が他にもいっぱい<br>
-
-▶︎こんなキャラや組み合わせが好き<br>
+<br>
+<strong>▶︎好きになる傾向</strong><br>
 ・怒ると怖い普段は温厚なキャラ<br>
 ・重い過去を持ちつつ表ヅラが軽い男<br>
 ・いかつい男と美女の組み合わせ<br>
@@ -289,7 +286,7 @@
 ・積極的な年下とそれをいなす年上のCP<br>
 ・女性上位気味な男女CP<br>
 <br>
-▶︎これは無理<br>
+<strong>▶︎これは無理</strong><br>
 原作ゲーム未プレイ状態で作られた二次創作
 
       </p>
